@@ -94,17 +94,17 @@ def test_invalid_file_warn():
 
 FakeArgparseObject = collections.namedtuple('FakeArgs',
                                             ['ksize', 'n_tables',
-                                             'min_tablesize',
+                                             'max_tablesize',
                                              'max_memory_usage'])
 
 
 def test_create_countgraph_1():
     ksize = khmer_args.DEFAULT_K
     n_tables = khmer_args.DEFAULT_N_TABLES
-    min_tablesize = khmer_args.DEFAULT_MIN_TABLESIZE
+    max_tablesize = khmer_args.DEFAULT_MAX_TABLESIZE
     max_mem = 1e7
 
-    args = FakeArgparseObject(ksize, n_tables, min_tablesize, max_mem)
+    args = FakeArgparseObject(ksize, n_tables, max_tablesize, max_mem)
 
     countgraph = khmer_args.create_countgraph(args)
     assert countgraph.hashsizes() == [2499997L, 2499989L, 2499983L, 2499967L]
@@ -118,10 +118,10 @@ def test_create_countgraph_2():
 
     ksize = khmer_args.DEFAULT_K
     n_tables = khmer_args.DEFAULT_N_TABLES
-    min_tablesize = khmer_args.DEFAULT_MIN_TABLESIZE
+    max_tablesize = khmer_args.DEFAULT_MAX_TABLESIZE
     max_mem = 1e7
 
-    args = FakeArgparseObject(ksize, n_tables, min_tablesize, max_mem)
+    args = FakeArgparseObject(ksize, n_tables, max_tablesize, max_mem)
 
     countgraph = khmer_args.create_countgraph(args, ksize=15)
     assert countgraph.ksize() == 15
@@ -132,10 +132,10 @@ def test_create_countgraph_3():
 
     ksize = khmer_args.DEFAULT_K
     n_tables = khmer_args.DEFAULT_N_TABLES
-    min_tablesize = khmer_args.DEFAULT_MIN_TABLESIZE
+    max_tablesize = khmer_args.DEFAULT_MAX_TABLESIZE
     max_mem = 1e7
 
-    args = FakeArgparseObject(ksize, n_tables, min_tablesize, max_mem)
+    args = FakeArgparseObject(ksize, n_tables, max_tablesize, max_mem)
 
     try:
         countgraph = khmer_args.create_countgraph(args, ksize=35)
@@ -147,10 +147,10 @@ def test_create_countgraph_3():
 def test_create_nodegraph_1():
     ksize = khmer_args.DEFAULT_K
     n_tables = khmer_args.DEFAULT_N_TABLES
-    min_tablesize = khmer_args.DEFAULT_MIN_TABLESIZE
+    max_tablesize = khmer_args.DEFAULT_MAX_TABLESIZE
     max_mem = 1e7
 
-    args = FakeArgparseObject(ksize, n_tables, min_tablesize, max_mem)
+    args = FakeArgparseObject(ksize, n_tables, max_tablesize, max_mem)
 
     nodegraph = khmer_args.create_nodegraph(args)
     assert nodegraph.hashsizes() == [19999999L, 19999981L,
@@ -164,10 +164,10 @@ def test_create_nodegraph_2():
 
     ksize = khmer_args.DEFAULT_K
     n_tables = khmer_args.DEFAULT_N_TABLES
-    min_tablesize = khmer_args.DEFAULT_MIN_TABLESIZE
+    max_tablesize = khmer_args.DEFAULT_MAX_TABLESIZE
     max_mem = 1e7
 
-    args = FakeArgparseObject(ksize, n_tables, min_tablesize, max_mem)
+    args = FakeArgparseObject(ksize, n_tables, max_tablesize, max_mem)
 
     nodegraph = khmer_args.create_nodegraph(args, ksize=15)
     assert nodegraph.ksize() == 15
@@ -178,10 +178,10 @@ def test_create_nodegraph_3():
 
     ksize = khmer_args.DEFAULT_K
     n_tables = khmer_args.DEFAULT_N_TABLES
-    min_tablesize = khmer_args.DEFAULT_MIN_TABLESIZE
+    max_tablesize = khmer_args.DEFAULT_MAX_TABLESIZE
     max_mem = 1e7
 
-    args = FakeArgparseObject(ksize, n_tables, min_tablesize, max_mem)
+    args = FakeArgparseObject(ksize, n_tables, max_tablesize, max_mem)
 
     try:
         nodegraph = khmer_args.create_nodegraph(args, ksize=35)
@@ -193,10 +193,10 @@ def test_create_nodegraph_3():
 def test_report_on_config_bad_hashtype():
     ksize = khmer_args.DEFAULT_K
     n_tables = khmer_args.DEFAULT_N_TABLES
-    min_tablesize = khmer_args.DEFAULT_MIN_TABLESIZE
+    max_tablesize = khmer_args.DEFAULT_MAX_TABLESIZE
     max_mem = 1e7
 
-    args = FakeArgparseObject(ksize, n_tables, min_tablesize, max_mem)
+    args = FakeArgparseObject(ksize, n_tables, max_tablesize, max_mem)
 
     try:
         khmer_args.report_on_config(args, 'foograph')
@@ -212,10 +212,10 @@ def test_fail_calculate_foograph_size():
 
     ksize = khmer_args.DEFAULT_K
     n_tables = khmer_args.DEFAULT_N_TABLES
-    min_tablesize = khmer_args.DEFAULT_MIN_TABLESIZE
+    max_tablesize = khmer_args.DEFAULT_MAX_TABLESIZE
     max_mem = 1e7
 
-    args = FakeArgparseObject(ksize, n_tables, min_tablesize, max_mem)
+    args = FakeArgparseObject(ksize, n_tables, max_tablesize, max_mem)
 
     try:
         nodegraph = khmer_args._calculate_tablesize(args, 'foograph')
