@@ -10,7 +10,7 @@
    be a base class.
    * khmer/khmer_args.py: removed environment variable override for hash size
    defaults; added -M/--max_memory_usage, and functions create_nodegraph()
-   and create_countgraph().
+   and create_countgraph().  Also renamed --min-tablesize to --max-tablesize.
    * khmer/kfile.py: fixed check_space_for_hashtable to depend on args obj.
    * oxli/build_graph.py, scripts/{annotate-partitions.py,count-overlap.py,
    do-partition.py,filter-stoptags.py,
@@ -23,6 +23,7 @@
    replaced counting hash/hashbits creation with new khmer_args create*
    functions, and/or new_counting_hash/new_hashbits with CountingHash/Hashbits.
    * doc/scripts.rst: updated hashtable size help text.
+   * doc/whats-new-2.0.rst: updated with description of -M/--max-memory-usage.
    * tests/test*.py: switched from new_counting_hash to CountingHash, and
    new_hashbits to Hashbits; adjusts tests for new behavior of hashtable
    size calculation.
